# module-fpnotes

./: .env.example  Dockerfile  README.md  docker-compose.yml  manifest.json  nginx.conf  package.json  registrar.py  tsconfig.json  vite.config.ts
api/: Cargo.toml  Dockerfile  main.py  requirements.txt
api/migrations/: 001_initial.sql
api/src/: auth.rs  error.rs  main.rs
api/src/routes/: admin.rs  mod.rs  notes.rs  shares.rs  todos.rs
src/: App.svelte  index.ts
src/components/: NoteCard.svelte  NoteEditor.svelte  NotesList.svelte  ShareModal.svelte  TodoList.svelte
src/lib/: api.ts  types.ts
