[package]
name    = "fpnotes-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = { version = "0.8",  features = ["json"] }
tokio         = { version = "1",    features = ["full"] }
sqlx          = { version = "0.8",  features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1",    features = ["v4", "serde"] }
chrono        = { version = "0.4",  features = ["serde"] }
jsonwebtoken  = "9"
reqwest       = { version = "0.12", features = ["json"] }
tower-http    = { version = "0.6",  features = ["cors"] }
thiserror     = "2"
anyhow        = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle        = "2"
